add lager parse_transform and fix configs by default

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
+{erl_opts, [{parse_transform, lager_transform}, debug_info]}.
 {sub_dirs, ["rel", "apps/*"]}.
 {deps, [
     {ecomponent, ".*", {git, "https://github.com/altenwald/ecomponent", {branch, "simple"}}},
@@ -5,3 +6,5 @@
 ]}.
 {plugins, [rebar_vsn_plugin]}.
 {plugin_dir, "deps/rebar_vsn_plugin/src"}.
+
+{require_otp_vsn, "R16"}.
