--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -20,7 +20,12 @@
         {mnesia_nodes, []},
         {mnesia_callback, []},
         {features, [
-            <<"http://jabber.org/protocol/muc">>
+            <<"http://jabber.org/protocol/disco#info">>,
+            <<"http://jabber.org/protocol/disco#items">>,
+            %% TODO: http://xmpp.org/extensions/xep-0059.html
+            %% <<"http://jabber.org/protocol/rsm">>,
+            <<"http://jabber.org/protocol/muc">>,
+            <<"http://jabber.org/protocol/muc#unique">>
         ]},
         {info, [
             {type, <<"text">>},
