--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,50 +1,49 @@
 {sys, [
-       {lib_dirs, ["../apps", "../deps"]},
-       {erts, [{mod_cond, derived}, {app_file, strip}]},
-       {app_file, strip},
-       {rel, "muc", git, [
-         kernel,
-         stdlib,
-         inets,
-         crypto,
-         sasl,
-         exmpp,
-         lager,
-         ecomponent,
-         muc
-        ]},
-       {rel, "start_clean", "",
-        [
-         kernel,
-         stdlib
-        ]},
-       {boot_rel, "muc"},
-       {profile, embedded},
-       {incl_cond, derived},
-       {mod_cond, derived},
-       {excl_archive_filters, [".*"]}, %% Do not archive built libs
-       {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
-                           "^erts.*/(doc|info|include|lib|man|src)"]},
-       {excl_app_filters, ["\.gitignore"]},
-       {app, muc, [{mod_cond, app}, {incl_cond, include}]},
-       %% TODO: see if HiPE could be included (in Debian throw an error):
-       %% {"init terminating in do_boot",{'cannot load',hipe,get_file}}
-       {app, hipe, [{incl_cond, exclude}]},
-       {app, ct_tools, [{incl_cond, exclude}]},
-       {app, common_test, [{incl_cond, exclude}]},
-       {app, covertool, [{incl_cond, exclude}]}
-      ]}.
+  {lib_dirs, ["../apps", "../deps"]},
+  {erts, [{mod_cond, derived}, {app_file, strip}]},
+  {app_file, strip},
+  {rel, "muc", git, [
+    kernel,
+    stdlib,
+    inets,
+    crypto,
+    sasl,
+    exmpp,
+    lager,
+    ecomponent,
+    muc
+  ]},
+  {rel, "start_clean", "", [
+    kernel,
+    stdlib
+  ]},
+  {boot_rel, "muc"},
+  {profile, embedded},
+  {incl_cond, derived},
+  {mod_cond, derived},
+  {excl_archive_filters, [".*"]}, %% Do not archive built libs
+  {excl_sys_filters, ["^bin/.*", "^erts.*/bin/(dialyzer|typer)",
+                      "^erts.*/(doc|info|include|lib|man|src)"]},
+  {excl_app_filters, ["\.gitignore"]},
+  {app, muc, [{mod_cond, app}, {incl_cond, include}]},
+  %% TODO: see if HiPE could be included (in Debian throw an error):
+  %% {"init terminating in do_boot",{'cannot load',hipe,get_file}}
+  {app, hipe, [{incl_cond, exclude}]},
+  {app, ct_tools, [{incl_cond, exclude}]},
+  {app, common_test, [{incl_cond, exclude}]},
+  {app, covertool, [{incl_cond, exclude}]}
+]}.
 
 {target_dir, "muc"}.
 
 {overlay, [
-           {mkdir, "log/sasl"},
-           {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
-           {copy, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
-           {copy, "files/muc", "bin/muc"},
-           {copy, "files/muc.cmd", "bin/muc.cmd"},
-           {copy, "files/start_erl.cmd", "bin/start_erl.cmd"},
-           {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
-           {copy, "files/app.config", "etc/app.config"},
-           {copy, "files/vm.args", "etc/vm.args"}
-          ]}.
+  {mkdir, "log/sasl"},
+  {copy, "files/erl", "\{\{erts_vsn\}\}/bin/erl"},
+  {copy, "files/nodetool", "\{\{erts_vsn\}\}/bin/nodetool"},
+  {copy, "files/muc", "bin/muc"},
+  {copy, "files/muc.cmd", "bin/muc.cmd"},
+  {copy, "files/start_erl.cmd", "bin/start_erl.cmd"},
+  {copy, "files/install_upgrade.escript", "bin/install_upgrade.escript"},
+  {copy, "files/app.config", "etc/app.config"},
+  {copy, "files/vm.args", "etc/vm.args"}
+]}.
