--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -35,6 +35,17 @@
         {disco_info, true}
     ]},
 
+    {epgsql_pool,  [
+        {pools, [ejabberd]},
+        {ejabberd, {10, [
+            {database, "ejabberd"},
+            {host, "localhost"},
+            {port, 5432},
+            {username, "ejabberd"},
+            {password, "ejabberd2014"}
+        ]}},
+    ]}, 
+
     {lager, [
         {handlers, [
             {lager_console_backend, info},
