--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,9 @@
 {sub_dirs, ["rel", "apps/*"]}.
 {deps, [
     {ecomponent, ".*", {git, "https://github.com/altenwald/ecomponent", {branch, "simple"}}},
-    {rebar_vsn_plugin, ".*", {git, "https://github.com/erlware/rebar_vsn_plugin.git", master}}
+    {rebar_vsn_plugin, ".*", {git, "https://github.com/erlware/rebar_vsn_plugin.git", master}},
+    {epgsql, ".*", {git, "https://github.com/wg/epgsql.git", master}},
+    {epgsql_pool, ".*", {git, "https://github.com/josephwecker/epgsql_pool.git", master}}
 ]}.
 {plugins, [rebar_vsn_plugin]}.
 {plugin_dir, "deps/rebar_vsn_plugin/src"}.
