--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -37,9 +37,9 @@
 
     {epgsql_pool,  [
         {pools, [ejabberd]},
-        {ejabberd, {10, [
+        {ejabberd, {5, [
             {database, "ejabberd"},
-            {host, "localhost"},
+            {host, "127.0.0.1"},
             {port, 5432},
             {username, "ejabberd"},
             {password, "ejabberd2014"}
