--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -8,6 +8,11 @@
     inets,
     crypto,
     sasl,
+    asn1,
+    public_key,
+    ssl,
+    epgsql,
+    epgsql_pool,
     exmpp,
     lager,
     ecomponent,
