--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,8 @@
     {ecomponent, ".*", {git, "https://github.com/altenwald/ecomponent", {branch, "simple"}}},
     {rebar_vsn_plugin, ".*", {git, "https://github.com/erlware/rebar_vsn_plugin.git", master}},
     {epgsql, ".*", {git, "https://github.com/wg/epgsql.git", master}},
-    {epgsql_pool, ".*", {git, "https://github.com/josephwecker/epgsql_pool.git", master}}
+    {epgsql_pool, ".*", {git, "https://github.com/josephwecker/epgsql_pool.git", master}},
+    {nprocreg, ".*", {git, "https://github.com/nitrogen/nprocreg.git", master}}
 ]}.
 {plugins, [rebar_vsn_plugin]}.
 {plugin_dir, "deps/rebar_vsn_plugin/src"}.
