config room get/set implemented

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
     {rebar_vsn_plugin, ".*", {git, "https://github.com/erlware/rebar_vsn_plugin.git", master}},
     {epgsql, ".*", {git, "https://github.com/wg/epgsql.git", master}},
     {epgsql_pool, ".*", {git, "https://github.com/josephwecker/epgsql_pool.git", master}},
-    {nprocreg, ".*", {git, "https://github.com/nitrogen/nprocreg.git", master}}
+    {nprocreg, ".*", {git, "https://github.com/altenwald/nprocreg.git", master}}
 ]}.
 {plugins, [rebar_vsn_plugin]}.
 {plugin_dir, "deps/rebar_vsn_plugin/src"}.
