add functional tests and coverage config

--- a/rebar.config
+++ b/rebar.config
@@ -11,3 +11,8 @@
 {plugin_dir, "deps/rebar_vsn_plugin/src"}.
 
 {require_otp_vsn, "R16"}.
+
+{cover_enabled, true}.
+{cover_print_enable, true}.
+
+{eunit_opts, [verbose, {report, {eunit_surefire, [{dir, "."}]}}]}.
