use DBI for database access

--- a/rebar.config
+++ b/rebar.config
@@ -1,10 +1,9 @@
 {erl_opts, [{parse_transform, lager_transform}, debug_info]}.
 {sub_dirs, ["rel", "apps/*"]}.
 {deps, [
-    {ecomponent, ".*", {git, "https://github.com/altenwald/ecomponent", {branch, "simple"}}},
+    {ecomponent, ".*", {git, "https://github.com/altenwald/ecomponent", master}},
     {rebar_vsn_plugin, ".*", {git, "https://github.com/erlware/rebar_vsn_plugin.git", master}},
-    {epgsql, ".*", {git, "https://github.com/wg/epgsql.git", master}},
-    {epgsql_pool, ".*", {git, "https://github.com/josephwecker/epgsql_pool.git", master}}
+    {dbi, ".*", {git, "https://github.com/altenwald/dbi.git", master}}
 ]}.
 {plugins, [rebar_vsn_plugin]}.
 {plugin_dir, "deps/rebar_vsn_plugin/src"}.
