--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -35,16 +35,18 @@
         {disco_info, true}
     ]},
 
-    {epgsql_pool,  [
-        {pools, [ejabberd]},
-        {ejabberd, {5, [
+    {dbi, [
+        {muc_pool, [
+            {type, pgsql},
             {database, "ejabberd"},
             {host, "127.0.0.1"},
             {port, 5432},
-            {username, "ejabberd"},
-            {password, "ejabberd2014"}
-        ]}}
-    ]}, 
+            {user, "ejabberd"},
+            {pass, "ejabberd2014"},
+            {poolsize, 5},
+            {delayed, muc_pool_queue}
+        ]}
+    ]}
 
     {lager, [
         {handlers, [
