forseti, dbi and mix app with sup files

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -10,14 +10,13 @@
             ]}
         ]},
         {throttle, false},
-        {access_list_get, []},
-        {access_list_set, []},
+        {resend, false},
         {processors, [
             {default, {mod, muc}}
         ]},
         {message_processor, {mod, muc}},
         {presence_processor, {mod, muc}},
-        {mnesia_nodes, []},
+        {mnesia_nodes, [muc@localhost]},
         {mnesia_callback, []},
         {features, [
             <<"http://jabber.org/protocol/disco#info">>,
